# MiniBooNE-DarkNews

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
MiniBooNE-fit/: selection_cuts.ipynb
SymmetryFit/: chi2vals.py  clean_results.sh  clean_slurm.sh  file_merge.py  fit_3p1_coupling.py  fit_3p1_general.py  fit_3p2_coupling.py  fit_3p2_general.py  profile_gen.py  show_jobs.sh  slurm_tools.py  submit_3p1.py  submit_3p1_couplings.py  submit_3p2.py
SymmetryFit/plots/: fit_3p1_couplings_sbn.ipynb  fit_3p2_couplings_sbn.ipynb  fit_3p2_general.ipynb  fit_3p2_general_B.ipynb  fit_3p2_general_B_e.4.ipynb
SymmetryFit/plotting_scripts/: coupling_plots.ipynb  fit_3p1_couplings_sbn.ipynb  fit_3p2_couplings_sbn_b.ipynb  fit_3p2_general.ipynb  general_plots.ipynb
SymmetryFit/plotting_scripts/other_limits/: Umu4_inv.npy
SymmetryFit/results/3p1_coupling_0.0008/: 5m_18d_20h_51m_15s_input_kwargs.npy
SymmetryFit/results/3p1_coupling_0.01/: 5m_12d_23h_17m_9s_input_kwargs.npy
SymmetryFit/results/3p1_general_0.001/: 5m_10d_21h_41m_34s_input_kwargs.npy
SymmetryFit/results/3p1_general_0.01/: 5m_19d_12h_24m_59s_input_kwargs.npy
SymmetryFit/results/3p2_coupling_0.0008_delta_0.50/: 5m_18d_20h_51m_21s_input_kwargs.npy
SymmetryFit/slurm/error/: 3p1_coupling_20230512_04.error  (+64 more)
src/ToyBNB/: __init__.py  analysis.py  analysis_decay_MCprime.py  cuts.py  decayer.py  exp_params.py  fastmc.py  fit_functions.py  fourvec.py  grid_fit.py  plot_tools.py
src/fastbnb/: __init__.py  analysis.py  decayer.py  fastmc.py  fit_functions.py  fourvec.py  grid_fit.py  plot_tools.py
(+347 files in other folders)
