[metadata]
name = fastbnb
authors = [
	{ name="Asli Abdullahi"},
	{ name="Jaime Hoefken"},
	{ name="Matheus Hostert", email="mhostert@g.harvard.edu"},
	{ name="Daniele Massaro"},
	]

author_email = "mhostert@g.harvard.edu"
version = attr: fastbnb.__version__
license = "MIT"
description = A set of tools for the simulation of dark neutrinos in the Booster Beam.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mhostert/MiniBooNE-DarkNews
classifiers =
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
zip_safe = False
package_dir = 
	=src

packages = find:

python_requires = >=3.7

install_requires =
    DarkNews

setup_requires =
	numpy

[options.packages.find]
where = src

[options.package_data]
* = 
	include/*/*.dat
	include/*/*.txt
	include/*/*.py
	include/*/*/*.dat
	include/*/*/*.txt
	include/*/*/*.py

fastbnb = py.typed

